--- a/common.pt_BR.po
+++ b/common.pt_BR.po
@@ -18,7 +18,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-07-28 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: zerowhy . <anymailz@tutanota.com>, 2021\n"
+"Last-Translator: yy0zz, 2021-2025\n"
 "Language-Team: Portuguese (Brazil) (http://app.transifex.com/team-xonotic/"
 "xonotic/language/pt_BR/)\n"
 "Language: pt_BR\n"
@@ -891,11 +891,11 @@ msgstr "Pontuação total"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:168
 msgid "Player skill"
-msgstr ""
+msgstr "Habilidade do jogador"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:168
 msgid "SCO^skill"
-msgstr ""
+msgstr "habilidade"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:169
 msgid "Number of suicides"
@@ -10916,7 +10916,7 @@ msgstr "Taxa de vítimas:"
 
 #: qcsrc/menu/xonotic/statslist.qc:209
 msgid "Skill:"
-msgstr ""
+msgstr "Habilidade:"
 
 #: qcsrc/menu/xonotic/statslist.qc:232
 #, c-format
