--- a/common.ru.po
+++ b/common.ru.po
@@ -13,6 +13,7 @@
 # Blueberryy, 2021,2023
 # Blueberryy, 2021
 # Blueberryy, 2021,2023
+# Blueberryy, 2021,2023
 # Blueberryy, 2021
 # Lord Canistra <lordcanistra@gmail.com>, 2011
 # Mirio <opivy@hotmail.de>, 2017
@@ -29,7 +30,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-08-14 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: Темак, 2024\n"
+"Last-Translator: Andrei Stepanov, 2014-2025\n"
 "Language-Team: Russian (http://app.transifex.com/team-xonotic/xonotic/"
 "language/ru/)\n"
 "Language: ru\n"
@@ -1432,7 +1433,7 @@ msgstr "Всё равно"
 #: qcsrc/client/mapvoting.qc:379
 #, c-format
 msgid "Suggested by: %s"
-msgstr ""
+msgstr "Предложение от: %s"
 
 #: qcsrc/client/mapvoting.qc:458
 msgid "Decide the gametype"
